@@ -5,3 +5,4 @@ totem.schemas
 *.gladep
 *.bak
 pixmaps
+totem-video-thumbnail.schemas*
